# indy7-control

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: hello_world.cpp  joint_control.cpp
examples/trajectories/: simple_trajectory.csv
include/: csv_utils.h
python/notebooks/: trajectory_generation.ipynb
src/indy7_msgs/: CMakeLists.txt  package.xml
src/indy7_msgs/msg/: JointCommand.msg  JointState.msg  JointTorque.msg  JointTrajectory.msg  JointTrajectoryPoint.msg
src/mpc/src/: mpc_settings.hpp  trajopt_node.cu
src/mujoco_sim/: CMakeLists.txt  package.xml
src/mujoco_sim/models/: indy7.xml
src/mujoco_sim/src/: mujoco_sim_node.cpp
src/robot_driver/: CMakeLists.txt  package.xml
src/robot_driver/config/: config.yaml
src/robot_driver/include/: joint_controller.hpp
src/robot_driver/launch/: robot_control.launch.py  sim_control.launch.py
src/robot_driver/src/: joint_controller.cpp  robot_driver_node.cpp  sim_driver_node.cpp
src/trajopt/: CMakeLists.txt  package.xml
src/trajopt/include/: csv_utils.h  trajopt_solver.cuh
src/trajopt/src/: trajopt_node.cu
src/trajopt/trajectories/: circle_traj_eePos_meters.csv  figure8_traj.csv
